--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     </style>
     <script type="text/javascript">
     </script>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
