--- a/public/poetry/no-mistério-do-sem-fim/index.html
+++ b/public/poetry/no-mistério-do-sem-fim/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US" class="scroll-smooth dark">
-  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+  <head>
 
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -16,7 +16,7 @@ e, no jardim, um canteiro;
 no canteiro uma violeta,
 e, sobre ela, o dia inteiro,"
 />
-<link rel="canonical" href="http://localhost:1313/poetry/no-mist%C3%A9rio-do-sem-fim/" />
+<link rel="canonical" href="http://www.aldomonteiro.com.br/poetry/no-mist%C3%A9rio-do-sem-fim/" />
 <link rel="robots" href="/robots.txt" />
 
 <link rel="icon" type="image/x-icon" href="/icons/favicon.ico" />
@@ -26,7 +26,7 @@ e, sobre ela, o dia inteiro,"
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 <script type="text/x-mathjax-config">MathJax.Hub.Config({ tex2jax: { inlineMath: [['$','$'], ['\\(','\\)']] } });</script>
 
-<link rel="stylesheet" href="http://localhost:1313/css/app.css" /></head>
+<link rel="stylesheet" href="http://www.aldomonteiro.com.br/css/app.min.b4160cf32a436fd8d53214a1bd9633d10bd7a5d9ae4d1637c20d48acf07716fd.css" integrity="sha256-tBYM8ypDb9jVMhShvZYz0QvXpdmuTRY3wg1IrPB3Fv0=" /></head>
 
   <body class="max-w-screen-md mx-auto px-2.5">
     <div class="header">
@@ -35,7 +35,7 @@ e, sobre ela, o dia inteiro,"
 
 
 <div class="flex-none w-20 h-20 rounded-full overflow-hidden">
-  <a href="http://localhost:1313/">
+  <a href="http://www.aldomonteiro.com.br/">
     <img
       srcset="/img/profile-picture_hu_fc4fef4f344b764b.jpg 80w"
       src="/img/profile-picture.jpg"
@@ -48,7 +48,7 @@ e, sobre ela, o dia inteiro,"
 
   
   <div class="flex flex-col gap-5">
-    <a href="http://localhost:1313/">
+    <a href="http://www.aldomonteiro.com.br/">
   <h1 id="site-title">Aldo Monteiro</h1>
 </a>
  
@@ -200,7 +200,7 @@ a asa de uma borboleta</p>
     </main><footer class="pt-5 pb-10 grid gap-3 sm:grid-cols-2">
     <div class="text-xs font-semibold text-gray-500 order-2 sm:order-1">
   © 2025 —
-  <a href="http://localhost:1313/">Aldo Monteiro</a> 
+  <a href="http://www.aldomonteiro.com.br/">Aldo Monteiro</a> 
   <span class="font-normal">with</span>
   <a
     href="https://github.com/nixentric/Lowkey-Hugo-Theme"
