--- a/public/poetry/ozymandias/index.html
+++ b/public/poetry/ozymandias/index.html
@@ -24,7 +24,7 @@ Nothing besides remains. Round the decay
 Of that colossal wreck, boundless and bare
 The lone and level sands stretch far away."
 />
-<link rel="canonical" href="http://www.aldomonteiro.com.br/poetry/ozymandias/" />
+<link rel="canonical" href="http://aldomonteiro.com.br/poetry/ozymandias/" />
 <link rel="robots" href="/robots.txt" />
 
 <link rel="icon" type="image/x-icon" href="/icons/favicon.ico" />
@@ -34,7 +34,7 @@ The lone and level sands stretch far away."
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 <script type="text/x-mathjax-config">MathJax.Hub.Config({ tex2jax: { inlineMath: [['$','$'], ['\\(','\\)']] } });</script>
 
-<link rel="stylesheet" href="http://www.aldomonteiro.com.br/css/app.min.b4160cf32a436fd8d53214a1bd9633d10bd7a5d9ae4d1637c20d48acf07716fd.css" integrity="sha256-tBYM8ypDb9jVMhShvZYz0QvXpdmuTRY3wg1IrPB3Fv0=" /></head>
+<link rel="stylesheet" href="http://aldomonteiro.com.br/css/app.min.b4160cf32a436fd8d53214a1bd9633d10bd7a5d9ae4d1637c20d48acf07716fd.css" integrity="sha256-tBYM8ypDb9jVMhShvZYz0QvXpdmuTRY3wg1IrPB3Fv0=" /></head>
 
   <body class="max-w-screen-md mx-auto px-2.5">
     <div class="header">
@@ -43,7 +43,7 @@ The lone and level sands stretch far away."
 
 
 <div class="flex-none w-20 h-20 rounded-full overflow-hidden">
-  <a href="http://www.aldomonteiro.com.br/">
+  <a href="http://aldomonteiro.com.br/">
     <img
       srcset="/img/profile-picture_hu_fc4fef4f344b764b.jpg 80w"
       src="/img/profile-picture.jpg"
@@ -56,7 +56,7 @@ The lone and level sands stretch far away."
 
   
   <div class="flex flex-col gap-5">
-    <a href="http://www.aldomonteiro.com.br/">
+    <a href="http://aldomonteiro.com.br/">
   <h1 id="site-title">Aldo Monteiro</h1>
 </a>
  
@@ -214,7 +214,7 @@ The lone and level sands stretch far away.</p>
     </main><footer class="pt-5 pb-10 grid gap-3 sm:grid-cols-2">
     <div class="text-xs font-semibold text-gray-500 order-2 sm:order-1">
   © 2025 —
-  <a href="http://www.aldomonteiro.com.br/">Aldo Monteiro</a> 
+  <a href="http://aldomonteiro.com.br/">Aldo Monteiro</a> 
   <span class="font-normal">with</span>
   <a
     href="https://github.com/nixentric/Lowkey-Hugo-Theme"
